02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game2048
  name: game2048
spec:
  revisionHistoryLimit: 5
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0%
  selector:
    matchLabels:
      app.kubernetes.io/name: game2048
  template:
    metadata:
      labels:
        app.kubernetes.io/name: game2048
    spec:
      containers:
        - name: game2048
          image: "767398149275.dkr.ecr.ap-northeast-2.amazonaws.com/ops-app:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
      nodeSelector:
        nodeType: service-2023
      tolerations:
        - key: service
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
